# PONK_distilled_rules

./: .gitignore  README.md  design.md
experiment_01/: EVALUATION_REPORT.md  README.md  evaluate_annotations.py  extract_annotations.py  generate_prompts.py  payload_template.md  prompt_template.json  pyproject.toml  run_annotations.py  speech_acts.md
experiment_01/annotations/: document_01.json  document_02.json
experiment_01/evaluations/: eval_response_document_01.json  eval_response_document_02.json  evaluation_summary.json
experiment_01/input_data/: document_01.md  document_02.md
experiment_01/prompts/: prompt_document_01.json  prompt_document_02.json
experiment_01/responses/: response_document_01.json  response_document_02.json
local_testing/: README.md  annotate_pipeline.py  sample_input.txt  sample_input_out.txt
ponk-app3/: DEPLOYMENT.md  README.md  app.py  conllu_processor.py  llm_client.py  pyproject.toml  test_service.py
test_app/: app.py
test_ufal_models/: benchmark_models.py  list_models.py
